--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <groupId>ru.complexhex</groupId>
     <artifactId>lesson14</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>lesson</name>
+    <name>total</name>
     <description>Demo project for Spring Boot</description>
 
 
@@ -32,9 +32,9 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
-            <version>3.0.3.RELEASE</version>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.0.15.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
